Upto Signup and Login

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
     </div>
     <br><br><br><br>
 
-    <div class="row">
+    <div class="row" style="margin: 0;">
         <div class="col-lg-6">
             <h3 style="text-align: center; color: black;">About this Website</h3><br>
             <p style="color: black;">This website lists the names of volunteers who are willing to donate blood.
