--- a/src/app/admin-home/admin-home.component.html
+++ b/src/app/admin-home/admin-home.component.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
-                    <h2 class="heading-section">Blood Donors List</h2>
+                    <h2 class="heading-section">Donor Enroll Request List</h2>
                 </div>
 			</div>
 			<div class="row justify-content-center">
@@ -24,8 +24,8 @@
                         <tr>
                             
                             <td>
-                                <button class="btn btn-warning" style="cursor:pointer"> Edit</button>
-                                <button class="btn btn-danger" style="cursor:pointer; margin-left:1%">Delete</button>
+                                <button class="btn btn-success" style="cursor:pointer">Accept</button>
+                                <button class="btn btn-warning" style="cursor:pointer; margin-left:1%">Reject</button>
                             </td>
                         </tr>
                     </tbody>
