--- a/src/app/user-signup/user-signup.component.html
+++ b/src/app/user-signup/user-signup.component.html
@@ -48,7 +48,7 @@
                         <!-- Space for writing Error message -->
                     </span>
 					<div class='form-group text-center text-warning' *ngIf="errorMsg">
-						<br>An account with the Email ID is alredy registered. Please Log In or create new account using a new Email ID.
+						An account with the Email ID is alredy registered. Please Log In or create new account using a new Email ID.
 					</div>
 	                <div class="form-group">
 	            	    <button type="submit" class="form-control btn btn-primary submit px-3" [disabled]="newUser.invalid">Sign Up</button>
