All login and signup completed (no authorization)

--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -9,7 +9,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-6 col-lg-4">
 					<div class="login-wrap p-0">
-		      	<form class="signin-form" [formGroup]='admin' (ngSubmit)='adminLogin()'>
+		      	<form class="signin-form" [formGroup]='admin' enctype="multipart/form-data" (ngSubmit)='adminLogin()'>
 		      		<div class="form-group">
 		      			<input type="text" class="form-control" placeholder="Administrator Code" formControlName='name' name='name'>
 		      		</div>
@@ -17,20 +17,20 @@
 						Code is Required
 					</span>
 	                <div class="form-group">
-	                    <input id="password-field" type="password" class="form-control" placeholder="Administrator Password" formControlname='password' name='password'>
+	                    <input id="password-field" type="password" class="form-control" placeholder="Administrator Password" formControlName='password' name='password'>
 	                    <!-- <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span> -->
 	                </div>
 					<span class="text-warning" style="margin-left: 30%;" *ngIf='(formControl.password.touched || submitted) && formControl.password.errors?.required'>
 						Password is required
 					</span>
-                    <span>
-                        <!-- Space for writing Error message -->
-                    </span>
+                    <!-- <span>
+                        Space for writing Error message
+                    </span> -->
 					<div class='form-group text-center text-warning' *ngIf="errorMsg">
-						<br>Incorrect Code or Password.
+						Incorrect Code or Password.
 					</div>
 	                <div class="form-group">
-	            	    <button type="submit" class="form-control btn btn-primary submit px-3" [disabled]="admin.invalid">Sign In</button>
+	            	    <button type="submit" class="form-control btn btn-primary submit px-3" [disabled]='admin.invalid'>Sign In</button>
 	                </div><br>
 	                <!-- <div style="text-align: center;">
                         <a routerLink="/user_signup">Create an Account</a>
