User-Donor add and update completed

--- a/src/app/add-donor/add-donor.component.html
+++ b/src/app/add-donor/add-donor.component.html
@@ -21,7 +21,7 @@
 	                    <!-- <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span> -->
 	                </div>
                     <div class="form-group">
-	                    <input type="text" class="form-control" placeholder="District" name='address' [(ngModel)]='newDonor.district' required> 
+	                    <input type="text" class="form-control" placeholder="District" name='district' [(ngModel)]='newDonor.district' required> 
 	                    <!-- <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span> -->
 	                </div>
                     <div class='form-group' style="margin-left: 5%;">
