--- a/src/app/edit-donor/edit-donor.component.html
+++ b/src/app/edit-donor/edit-donor.component.html
@@ -9,24 +9,24 @@
 			<div class="row justify-content-center">
 				<div class="col-md-6 col-lg-4">
 					<div class="login-wrap p-0">
-		      	<form action="#" class="signin-form">
+		      	<form class="signin-form" (ngSubmit)='editDonor()' enctype='multipart/form-data'>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Full Name" required>
+                        <input type="text" class="form-control" placeholder="Full Name" name='name' [(ngModel)]='donor.name' disabled>
                     </div>  
 		      		<div class="form-group">
-		      			<input type="text" class="form-control" placeholder="Email ID" required>
+		      			<input type="text" class="form-control" placeholder="Email ID" name='email' [(ngModel)]='donor.email' disabled>
 		      		</div>
 	                <div class="form-group">
-	                    <input type="text" class="form-control" placeholder="Address" required>
+	                    <input type="text" class="form-control" placeholder="Address" name='address' [(ngModel)]='donor.address' required>
 	                    <!-- <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span> -->
 	                </div>
                     <div class="form-group">
-	                    <input type="text" class="form-control" placeholder="District" required>
+	                    <input type="text" class="form-control" placeholder="District" name='district' [(ngModel)]='donor.district' required>
 	                    <!-- <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span> -->
 	                </div>
                     <div class='form-group' style="margin-left: 5%;">
                         <label for="blood_group">Blood Type &nbsp;</label>
-                        <select>
+                        <select [(ngModel)]='donor.blood' name='blood' required>
                             <option value="A+ve">A+ve</option>
                             <option value="A-ve">A-ve</option>
                             <option value="B+ve">B+ve</option>            
@@ -38,13 +38,13 @@
                         </select>
                       </div>
                     <div class="form-group">
-                        <input type="number" class="form-control" placeholder="Mobile Number" required>
+                        <input type="number" class="form-control" placeholder="Mobile Number" [(ngModel)]='donor.phone' name='phone' disabled>
                     </div>
                     <span>
                         <!-- Space for writing Error message -->
                     </span>
 	                <div class="form-group">
-	            	    <button type="submit" class="form-control btn btn-primary submit px-3">Register as Donor</button>
+	            	    <button type="submit" class="form-control btn btn-primary submit px-3">Edit Information</button>
 	                </div>
 	                <!-- <div style="text-align: center;">
                         <a routerLink="/user_login">Already have an Account?</a>
