User 90% completed (Navbar remaining)

--- a/src/app/edit-donor/edit-donor.component.html
+++ b/src/app/edit-donor/edit-donor.component.html
@@ -44,12 +44,13 @@
                         <!-- Space for writing Error message -->
                     </span>
 	                <div class="form-group">
-	            	    <button type="submit" class="form-control btn btn-primary submit px-3">Edit Information</button>
+	            	    <button type="submit" class="form-control btn btn-primary submit px-3">Edit Information</button><br>
 	                </div>
 	                <!-- <div style="text-align: center;">
                         <a routerLink="/user_login">Already have an Account?</a>
                     </div> -->
 	            </form>
+				<button type='submit' class="form-control btn btn-primary submit px-3" (click)='deleteDonor()'>Delete Donor Information</button>
 	            <!-- <p class="w-100 text-center">&mdash; Or Sign In With &mdash;</p>
 	            <div class="social d-flex text-center">
 	          	    <a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>
