--- a/src/app/admin-home/admin-home.component.html
+++ b/src/app/admin-home/admin-home.component.html
@@ -21,11 +21,17 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            
+                        <tr *ngFor='let i of donorRequest,let j=index'>
+                            <td>{{j+1}}</td>
+                            <td>{{i.name}}</td>
+                            <td>{{i.email}}</td>
+                            <td>{{i.address}}</td>
+                            <td>{{i.district}}</td>
+                            <td>{{i.blood}}</td>
+                            <td>{{i.phone}}</td>
                             <td>
-                                <button class="btn btn-success" style="cursor:pointer">Accept</button>
-                                <button class="btn btn-warning" style="cursor:pointer; margin-left:1%">Reject</button>
+                                <button class="btn btn-success" style="cursor:pointer" (click)='acceptDonor(i)'>Accept</button>
+                                <button class="btn btn-warning" style="cursor:pointer; margin-left:1%" (click)='rejectDonor(i)'>Reject</button>
                             </td>
                         </tr>
                     </tbody>
